# note

./: README.md  build_run.sh  note.cabal
app/: Main.hs
frontend/: elm.json  package.json
frontend/src/: Main.elm  index.html
src/: App.hs
src/Config/: Config.hs
