name:                note
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/reouno/note#readme
license:             BSD3
license-file:        LICENSE
author:              Leo Uno
maintainer:          leouno12@gmail.com
copyright:           Copyright (c) 2019 Leo Uno
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Config.Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , filepath
                     , http-media
                     , servant
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable note-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , note
                     , warp
  default-language:    Haskell2010

test-suite note-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , note
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reouno/note
